[HTML]: initial environment with semantic tags

--- a/nft-preview-card-component-main/index.html
+++ b/nft-preview-card-component-main/index.html
@@ -28,6 +28,58 @@
     </style>
   </head>
   <body>
+    <section>
+      <div class="container">
+        <!--main imgs and hover effect start here-->
+        <div class="main-img-box">
+          <img
+            src="./images/image-equilibrium.jpg"
+            alt=""
+            class="main-img-equilibrium"
+          />
+          <div class="hover-img-icon">
+            <img src="./images/icon-view.svg" alt="" />
+          </div>
+        </div>
+        <!--main imgs and hover effect end here-->
+
+        <!--title and description start here-->
+        <div>
+          <header class="main-description-container">
+            <h1 class="title">Equilibrium #3429</h1>
+            <p class="description">
+              Our Equilibrium collection promotes balance and calm.
+            </p>
+          </header>
+        </div>
+        <!--title and description end here-->
+
+        <!--value and time section start here-->
+        <main>
+          <div class="secondary-container">
+            <img
+              src="./images/icon-ethereum.svg"
+              alt=""
+              class="icon-ethereum"
+            />
+            <p class="actual-value">0.041 ETH</p>
+          </div>
+
+          <div class="tertiary-container">
+            <img src="./images/icon-clock.svg" alt="" />
+            <p>3 days left</p>
+          </div>
+        </main>
+        <!--value and time section end here-->
+
+        <!--author information-->
+        <footer>
+          <img src="./images/image-avatar.png" alt="" class="author-avatar" />
+          <p>Creation of <span>Jules Wyvern</span></p>
+        </footer>
+      </div>
+    </section>
+
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
