[HTML]: alternative text description fixed

--- a/nft-preview-card-component-main/index.html
+++ b/nft-preview-card-component-main/index.html
@@ -38,7 +38,7 @@
             class="main-img-equilibrium"
           />
           <div class="hover-img-icon">
-            <img src="./images/icon-view.svg" alt="" />
+            <img src="./images/icon-view.svg" alt="More info icon" />
           </div>
         </div>
         <!--main imgs and hover effect end here-->
@@ -59,14 +59,14 @@
           <div class="secondary-container">
             <img
               src="./images/icon-ethereum.svg"
-              alt=""
+              alt="Ethereum icon"
               class="icon-ethereum"
             />
             <p class="actual-value">0.041 ETH</p>
           </div>
 
           <div class="tertiary-container">
-            <img src="./images/icon-clock.svg" alt="" />
+            <img src="./images/icon-clock.svg" alt="Icon clock as how many days are left" />
             <p>3 days left</p>
           </div>
         </main>
@@ -74,7 +74,7 @@
 
         <!--author information-->
         <footer>
-          <img src="./images/image-avatar.png" alt="" class="author-avatar" />
+          <img src="./images/image-avatar.png" alt="Author's picture" class="author-avatar" />
           <p>Creation of <span>Jules Wyvern</span></p>
         </footer>
       </div>
@@ -84,7 +84,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Felipe Miranda Marreiros</a>.
+      >. Coded by <a href="https://www.linkedin.com/in/felipe-miranda-marreiros/">Felipe Miranda Marreiros</a>.
     </div>
   </body>
 </html>
