Fixed the alternative text description of images

--- a/nft-preview-card-component-main/index.html
+++ b/nft-preview-card-component-main/index.html
@@ -34,11 +34,14 @@
         <div class="main-img-box">
           <img
             src="./images/image-equilibrium.jpg"
-            alt=""
+            alt="Equilibrium image"
             class="main-img-equilibrium"
           />
-          <div class="hover-img-icon">
-            <img src="./images/icon-view.svg" alt="More info icon" />
+          <div
+            class="hover-img-icon"
+            aria-label="When mouse over the picture, a hover effect will show up"
+          >
+            <img src="./images/icon-view.svg" alt="More information icon" />
           </div>
         </div>
         <!--main imgs and hover effect end here-->
@@ -55,7 +58,7 @@
         <!--title and description end here-->
 
         <!--value and time section start here-->
-        <main>
+        <div class="main-infos">
           <div class="secondary-container">
             <img
               src="./images/icon-ethereum.svg"
@@ -66,15 +69,22 @@
           </div>
 
           <div class="tertiary-container">
-            <img src="./images/icon-clock.svg" alt="Icon clock as how many days are left" />
+            <img
+              src="./images/icon-clock.svg"
+              alt="Icon clock as how many days are left"
+            />
             <p>3 days left</p>
           </div>
-        </main>
+        </div>
         <!--value and time section end here-->
 
         <!--author information-->
         <footer>
-          <img src="./images/image-avatar.png" alt="Author's picture" class="author-avatar" />
+          <img
+            src="./images/image-avatar.png"
+            alt="Author's picture"
+            class="author-avatar"
+          />
           <p>Creation of <span>Jules Wyvern</span></p>
         </footer>
       </div>
@@ -84,7 +94,10 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="https://www.linkedin.com/in/felipe-miranda-marreiros/">Felipe Miranda Marreiros</a>.
+      >. Coded by
+      <a href="https://www.linkedin.com/in/felipe-miranda-marreiros/"
+        >Felipe Miranda Marreiros</a
+      >.
     </div>
   </body>
 </html>
