--- a/intro-component-with-signup-form-master/index.html
+++ b/intro-component-with-signup-form-master/index.html
@@ -33,7 +33,7 @@
     <main>
       <div class="container">
         <section class="intro">
-          <h2 class="intro-header">Learn to code by watching others</h2>
+          <h1 class="intro-header">Learn to code by watching others</h1>
           <p class="intro-p">
             See how experienced developers solve problems in real-time. Watching
             scripted tutorials is great, but understanding how developers think
@@ -41,15 +41,15 @@
           </p>
         </section>
 
-        <section class="trial-box">
+        <div class="trial-box">
           <p class="trial-box-text">
             <span>Try it free 7 days</span> then $20/mo. thereafter
           </p>
-        </section>
+        </div>
 
-        <section class="forms-cta">
-          <form action="" class="forms-options" id="main-form">
-            <div class="input-field">
+        <div role="form" class="forms-cta">
+          <form action="#" class="forms-options" id="main-form">
+            <div role="textbox" class="input-field">
               <input
                 type="text"
                 placeholder="First Name"
@@ -63,10 +63,10 @@
                 alt="Exclamation mark icon"
                 hidden
               />
-              <p class="text-error"></p>
+              <div role="alert" class="text-error"></div>
             </div>
 
-            <div class="input-field">
+            <div role="textbox" class="input-field">
               <input
                 type="text"
                 placeholder="Last Name"
@@ -80,10 +80,10 @@
                 alt="Exclamation mark icon"
                 hidden
               />
-              <div class="text-error"></div>
+              <div role="alert" class="text-error"></div>
             </div>
 
-            <div class="input-field">
+            <div role="textbox" class="input-field">
               <input
                 type="email"
                 placeholder="Email Address"
@@ -98,9 +98,9 @@
                 alt="Exclamation mark icon"
                 hidden
               />
-              <div class="text-error"></div>
+              <div role="alert" class="text-error"></div>
             </div>
-            <div class="input-field">
+            <div role="textbox" class="input-field">
               <input
                 type="password"
                 placeholder="Password"
@@ -114,7 +114,7 @@
                 alt="Exclamation mark icon"
                 hidden
               />
-              <div class="text-error"></div>
+              <div role="alert" class="text-error"></div>
             </div>
             <button type="submit" class="btn-form" form="main-form">
               Claim your free trial
@@ -124,7 +124,7 @@
             By clicking the button, you are agreeing to our
             <span>Terms and Services</span>
           </p>
-        </section>
+        </div>
       </div>
     </main>
 
