[HTML]: added aria-label

--- a/intro-component-with-signup-form-master/index.html
+++ b/intro-component-with-signup-form-master/index.html
@@ -49,7 +49,7 @@
 
         <div role="form" class="forms-cta">
           <form action="#" class="forms-options" id="main-form">
-            <div role="textbox" class="input-field">
+            <div aria-label="first-name" role="textbox" class="input-field">
               <input
                 type="text"
                 placeholder="First Name"
@@ -66,7 +66,7 @@
               <div role="alert" class="text-error"></div>
             </div>
 
-            <div role="textbox" class="input-field">
+            <div aria-label="last-name" role="textbox" class="input-field">
               <input
                 type="text"
                 placeholder="Last Name"
@@ -83,7 +83,7 @@
               <div role="alert" class="text-error"></div>
             </div>
 
-            <div role="textbox" class="input-field">
+            <div aria-label="email" role="textbox" class="input-field">
               <input
                 type="email"
                 placeholder="Email Address"
@@ -100,7 +100,7 @@
               />
               <div role="alert" class="text-error"></div>
             </div>
-            <div role="textbox" class="input-field">
+            <div aria-label="password" role="textbox" class="input-field">
               <input
                 type="password"
                 placeholder="Password"
